--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <html lang="mr">
 
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8" /><script async src="https://www.googletagmanager.com/gtag/js?id=G-H2G2RRL4R4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-H2G2RRL4R4');
+</script>
     <title>ServicePoint.com</title>
 
     <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
