--- a/book.html
+++ b/book.html
@@ -162,7 +162,7 @@
     <ul style="line-height:2.1;font-size:16px;padding-left:15px;">
       <li>कृपया सर्व (*) फील्ड भरा</li>
       <li>सर्व अर्ज योग्य रित्या भरल्यानंतर आपला 7/12 वर विहीर बोअरवेल लावण्यासाठी अर्ज तयार केला जाईल </li>
-      <li>Preview नंतर प्रिंट करा</li>
+      <li>कृपया Preview बघा नंतर प्रिंट करा</li>
     </ul>
   </div>
 </div>
