--- a/index.html
+++ b/index.html
@@ -1265,42 +1265,42 @@ function closeZoom() {
 
     <div class="submenu-item-row">
         <span>विहीर/बोअरवेल अर्ज </span>
-        <a href="pdfs/boarvel.pdf" download class="download-btn">Download</a>
+        <a href="boarvel.pdf" download class="download-btn">Download</a>
     </div>
 
     <div class="submenu-item-row">
         <span>वारस फेरफार अर्ज </span>
-        <a href="pdfs/jatipramaan.pdf" download class="download-btn">Download</a>
+        <a href="jatipramaan.pdf" download class="download-btn">Download</a>
     </div>
 
     <div class="submenu-item-row">
         <span>7/12 नाव दुरुस्ती अर्ज </span>
-        <a href="pdfs/naav durusti.pdf" download class="download-btn">Download</a>
+        <a href="naav durusti.pdf" download class="download-btn">Download</a>
     </div>
 
     <div class="submenu-item-row">
         <span>सामाईक सहमती पत्र,पीकविमा</span>
-        <a href="pdfs/samaik sahmati vima.pdf" download class="download-btn">Download</a>
+        <a href="samaik sahmati vima.pdf" download class="download-btn">Download</a>
     </div>
 
     <div class="submenu-item-row">
         <span>पीक पेरा अर्ज </span>
-        <a href="pdfs/pikpera.pdf" download class="download-btn">Download</a>
+        <a href="pikpera.pdf" download class="download-btn">Download</a>
     </div>
 
     <div class="submenu-item-row">
         <span>जमाबंदी अर्ज</span>
-        <a href="pdfs/jamabandi.pdf" download class="download-btn">Download</a>
+        <a href="jamabandi.pdf" download class="download-btn">Download</a>
     </div>
 
     <div class="submenu-item-row">
         <span>कर (Tax) अर्ज</span>
-        <a href="pdfs/tax.pdf" download class="download-btn">Download</a>
+        <a href="tax.pdf" download class="download-btn">Download</a>
     </div>
 
     <div class="submenu-item-row">
         <span>इतर सर्व प्रकारचे अर्ज</span>
-        <a href="pdfs/other.pdf" download class="download-btn">Download</a>
+        <a href="other.pdf" download class="download-btn">Download</a>
     </div>
 
 </div>
